--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
 <header>
-    <img alt="logo" src="assets/logo.png">    
-    <nav>
-        <ul>
-            <li><input><label>Search</label></li>
-            <li><a href="#">All Countries</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+    <app-navbar></app-navbar>
 </header>
+<body>
+    <router-outlet></router-outlet>
+</body>
