read json data as service

--- a/src/app/country-detail/country-detail.component.html
+++ b/src/app/country-detail/country-detail.component.html
@@ -1,1 +1,7 @@
 <p>country-detail</p>
+<button mat-button routerLink="/country-list">back</button>
+<div *ngIf="receivedCountryName">
+    <pre>
+        {{ receivedCountryName }}
+    </pre>
+</div>
