--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,6 +3,6 @@
         <img alt="logo" src="assets/logo.png">    
     </a>
     <input>
-    <a mat-button routerLink="country-list">alle Länder</a>
+    <a mat-button routerLink="/country-list">alle Länder</a>
     <a mat-button routerLink="/contact">Kontakt</a>
 </mat-toolbar>
