some css and routing

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,24 @@
-<p>contact</p>
+<p>Feedback Form</p>
+
+<mat-form-field>
+    <mat-label>Anrede</mat-label>
+    <mat-select>
+      <mat-option value="one">Male</mat-option>
+      <mat-option value="two">Female</mat-option>
+    </mat-select>
+</mat-form-field>
+
+<mat-form-field>
+  <mat-label>Vorname</mat-label>
+  <input matInput>
+</mat-form-field>
+
+<mat-form-field>
+  <mat-label>Nachname</mat-label>
+  <input matInput>
+</mat-form-field>
+
+<mat-form-field>
+  <mat-label>Feedback</mat-label>
+  <textarea matInput></textarea>
+</mat-form-field>
