--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,2 @@
-<p>home</p>
+<h1>Welcome to Countries!</h1>
+<p>Herzlich Willkommen auf der Webseite "Countries"! Hier gibt es Informationen zu allen Ländern der Welt. Diese Anwendung dient zur Veranschaulichung von Barrierefreiheit im Internet. Solltest du Probleme oder Anregungen bezüglich dieser Webseite haben, lass es uns einfach wissen und teile uns dein Anliegen unter dem "Kontakt" mit.</p>
