--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,10 @@
     <a routerLink="/home">
         <img alt="logo" src="assets/logo.png">    
     </a>
-    <input>
-    <a mat-button routerLink="/country-list">alle Länder</a>
-    <a mat-button routerLink="/contact">Kontakt</a>
+    <span class="navbar-spacer"></span>
+    <div>
+        <input>
+        <a mat-button routerLink="/country-list">alle Länder</a>
+        <a mat-button routerLink="/contact">Kontakt</a>
+    </div>
 </mat-toolbar>
