--- a/src/app/country-detail/country-detail.component.html
+++ b/src/app/country-detail/country-detail.component.html
@@ -1,7 +1,6 @@
-<p>country-detail</p>
-<button mat-button routerLink="/country-list">back</button>
-<div *ngIf="receivedCountryName">
-    <pre>
-        {{ receivedCountryName }}
-    </pre>
+<!-- <button mat-button routerLink="/country-list">back</button> -->
+<div *ngIf="country">
+    <h1>{{ country.name.common }}</h1>
+    <img src="{{ country.flags.png }}">
+    {{ country.population }}
 </div>
