--- a/src/app/country-list/country-list.component.html
+++ b/src/app/country-list/country-list.component.html
@@ -1,12 +1,16 @@
-<p>all countries</p>
+<h1>Alle Länder</h1>
 <div *ngIf="countries">
             <div fxLayout="row wrap">
             <div *ngFor="let country of countries" >
-                <mat-card style="max-width: 80px;">
+                <mat-card style="width: 200px; height: auto;">
                     <a routerLink="/country-detail" [queryParams]="{ data: country.name.common }">
+                    <mat-card-header>
+                        <mat-card-title>
+                            {{ country.name.common }}
+                        </mat-card-title>
+                    </mat-card-header>
                         <mat-card-content>
-                            <img alt="logo" src="{{country.flags.png}}" width="50px" height="50px">    
-                            <mat-card-header>{{ country.name.common }}</mat-card-header>
+                            <img alt="logo" src="{{country.flags.png}}" width="auto" height="80px">    
                         </mat-card-content>
                     </a>
                 </mat-card>
