remove highlighted as  link

--- a/src/app/country-list/country-list.component.html
+++ b/src/app/country-list/country-list.component.html
@@ -5,8 +5,8 @@
                 <mat-card style="width: 200px; height: auto;">
                     <a routerLink="/country-detail" [queryParams]="{ data: country.name.common }">
                     <mat-card-header>
-                        <mat-card-title>
-                            {{ country.name.common }}
+                        <mat-card-title style="white-space: nowrap">
+                                {{ country.name.common }}
                         </mat-card-title>
                     </mat-card-header>
                         <mat-card-content>
