--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,5 +1,13 @@
-:host {
+/* :host {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-  }
+} */
+
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* height: 100vh; */
+}
