--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,24 +1,21 @@
-<p>Feedback Form</p>
+<h1>Feedback Form</h1>
 
-<mat-form-field>
-    <mat-label>Anrede</mat-label>
-    <mat-select>
-      <mat-option value="one">Male</mat-option>
-      <mat-option value="two">Female</mat-option>
-    </mat-select>
-</mat-form-field>
+<form (ngSubmit)="submitForm()">
+  <mat-form-field>
+    <mat-label for="name">Name: </mat-label>
+    <input matInput type="text" id="name" name="name" [(ngModel)]="formData.name" required>
+  </mat-form-field>
 
-<mat-form-field>
-  <mat-label>Vorname</mat-label>
-  <input matInput>
-</mat-form-field>
+  <mat-form-field>
+    <mat-label for="email">Email: </mat-label>
+    <input matInput type="text" id="email" name="email" [(ngModel)]="formData.email" required>
+  </mat-form-field>
 
-<mat-form-field>
-  <mat-label>Nachname</mat-label>
-  <input matInput>
-</mat-form-field>
+  <mat-form-field>
+    <mat-label for="message">Message: </mat-label>
+    <textarea matInput type="text" id="message" name="message" [(ngModel)]="formData.message" required></textarea>
+  </mat-form-field>
 
-<mat-form-field>
-  <mat-label>Feedback</mat-label>
-  <textarea matInput></textarea>
-</mat-form-field>
+  <button mat-raised-button type="submit">Submit</button>
+
+</form>
