--- a/src/app/country-detail/country-detail.component.html
+++ b/src/app/country-detail/country-detail.component.html
@@ -2,5 +2,5 @@
 <div *ngIf="country">
     <h1>{{ country.name.common }}</h1>
     <img src="{{ country.flags.png }}">
-    {{ country.population }}
+        Bevölkerungsanzahl: {{ country.population }}
 </div>
