--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,2 @@
 <h1>Welcome to Countries!</h1>
-<p>Herzlich Willkommen auf der Webseite "Countries"! Hier gibt es Informationen zu allen Ländern der Welt. Diese Anwendung dient zur Veranschaulichung von Barrierefreiheit im Internet. Solltest du Probleme oder Anregungen bezüglich dieser Webseite haben, lass es uns einfach wissen und teile uns dein Anliegen unter dem "Kontakt" mit.</p>
+<p>Welcome to the "Countries" website! Here you can find information about all countries of the world. This application is used to illustrate accessibility on the Internet. If you have any problems or suggestions regarding this website, just let us know your concerns under "Contact".</p>
