--- a/src/app/country-list/country-list.component.css
+++ b/src/app/country-list/country-list.component.css
@@ -5,3 +5,9 @@ a {
     color: #000000;
     text-decoration: none;
 }
+mat-card-title {
+    max-width: 160px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
