--- a/src/app/country-list/country-list.component.html
+++ b/src/app/country-list/country-list.component.html
@@ -5,7 +5,7 @@
                 <mat-card style="width: 200px; height: auto;">
                     <a routerLink="/country-detail" [queryParams]="{ data: country.name.common }">
                     <mat-card-header>
-                        <mat-card-title style="white-space: nowrap">
+                        <mat-card-title>
                                 {{ country.name.common }}
                         </mat-card-title>
                     </mat-card-header>
