--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,7 +1,13 @@
 mat-toolbar{
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
+    z-index: 1;
 }
 .navbar-spacer{
     flex: 1 1 auto;
+}
+.tabs a {
+    margin-left: 1em;
 }
