--- a/src/app/country-list/country-list.component.html
+++ b/src/app/country-list/country-list.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="countries">
             <div fxLayout="row wrap">
             <div *ngFor="let country of countries" >
-                <mat-card style="width: 200px; height: auto;">
+                <mat-card>
                     <a routerLink="/country-detail" [queryParams]="{ data: country.name.common }">
                     <mat-card-header>
                         <mat-card-title>
@@ -10,7 +10,7 @@
                         </mat-card-title>
                     </mat-card-header>
                         <mat-card-content>
-                            <img alt="logo" src="{{country.flags.png}}" width="auto" height="80px">    
+                            <img alt="logo" src="{{country.flags.png}}">    
                         </mat-card-content>
                     </a>
                 </mat-card>
