--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     </a>
     <span class="navbar-spacer"></span>
     <div class="tabs">
-        <label for="search" style="font-size: medium;">Search: </label>
+        <label for="search">Search: </label>
         <input type="text" id="search" name="search">
         <a mat-button routerLink="/country-list">All Countries</a>
         <a mat-button routerLink="/contact">Contact</a>
