added alt tag for images

--- a/src/app/country-list/country-list.component.html
+++ b/src/app/country-list/country-list.component.html
@@ -10,7 +10,7 @@
                         </mat-card-title>
                     </mat-card-header>
                         <mat-card-content>
-                            <img alt="logo" src="{{country.flags.png}}">    
+                            <img alt="{{ country.flags.alt }}" src="{{ country.flags.png }}">    
                         </mat-card-content>
                     </a>
                 </mat-card>
