--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <h1>Feedback Form</h1>
 
-<form (ngSubmit)="submitForm()">
+<form (ngSubmit)="submit()">
   <mat-form-field>
     <mat-label for="name">Name: </mat-label>
     <input matInput type="text" id="name" name="name" [(ngModel)]="formData.name" required>
@@ -16,6 +16,5 @@
     <textarea matInput type="text" id="message" name="message" [(ngModel)]="formData.message" required></textarea>
   </mat-form-field>
 
-  <button mat-raised-button type="submit">Submit</button>
-
+  <button mat-raised-button  type="submit">Submit</button>
 </form>
