--- a/src/app/country-detail/country-detail.component.html
+++ b/src/app/country-detail/country-detail.component.html
@@ -1,6 +1,6 @@
 <!-- <button mat-button routerLink="/country-list">back</button> -->
 <div *ngIf="country">
     <h1>{{ country.name.common }}</h1>
-    <img src="{{ country.flags.png }}">
+    <img alt="{{ country.flags.alt }}" src="{{ country.flags.png }}">
     <p>Population: {{ country.population }}</p>
 </div>
