--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,11 +7,10 @@
     <span class="navbar-spacer"></span>
     
     <div class="tabs">
-        <label for="search">Search: </label>
-        <input type="text" id="search" name="search" [(ngModel)]="searchTerm">
-        <!-- TODO: button focusable and with keydown event (eslint) -->
-        <a mat-button (click)="goToCountriesList()">Search</a>
-        
+        <input type="text" id="search" name="search" placeholder="Search..." [(ngModel)]="searchTerm" aria-label="search">
+        <!-- TODO: with keydown event (eslint) -->
+        <button mat-button (click)="goToCountriesList()" tabindex="0">Search</button>
+
         <a mat-button routerLink="/country-list">All Countries</a>
         <a mat-button routerLink="/contact">Contact</a>
     </div>
