--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,17 +4,17 @@
 
   <mat-form-field>
     <mat-label for="name">Name: </mat-label>
-    <input matInput type="text" id="name" name="name" [(ngModel)]="formData.name" required>
+    <input matInput type="text" id="name" name="name" [(ngModel)]="formData.name">
   </mat-form-field>
 
   <mat-form-field>
     <mat-label for="email">Email: </mat-label>
-    <input matInput type="text" id="email" name="email" [(ngModel)]="formData.email" required>
+    <input matInput type="text" id="email" name="email" [(ngModel)]="formData.email">
   </mat-form-field>
 
   <mat-form-field>
     <mat-label for="message">Message: </mat-label>
-    <textarea matInput type="text" id="message" name="message" [(ngModel)]="formData.message" required></textarea>
+    <textarea matInput type="text" id="message" name="message" [(ngModel)]="formData.message"></textarea>
   </mat-form-field>
 
   <button mat-raised-button type="submit">Submit</button>
