--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,19 +4,19 @@
 
   <mat-form-field>
     <mat-label for="name">Name: </mat-label>
-    <input matInput type="text" id="name" name="name" [(ngModel)]="formData.name">
+    <input matInput type="text" id="name" name="name" [(ngModel)]="formData.name" aria-label="Enter your name">
   </mat-form-field>
 
   <mat-form-field>
     <mat-label for="email">Email: </mat-label>
-    <input matInput type="text" id="email" name="email" [(ngModel)]="formData.email">
+    <input matInput type="text" id="email" name="email" [(ngModel)]="formData.email" aria-label="Enter your email">
   </mat-form-field>
 
   <mat-form-field>
     <mat-label for="message">Message: </mat-label>
-    <textarea matInput type="text" id="message" name="message" [(ngModel)]="formData.message"></textarea>
+    <textarea matInput type="text" id="message" name="message" [(ngModel)]="formData.message" aria-label="Enter a message"></textarea>
   </mat-form-field>
 
-  <button mat-raised-button type="submit">Submit</button>
+  <button mat-raised-button type="submit" aria-label="Submit">Submit</button>
   
 </form>
