--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <header>
+    <!-- Einbindung des Navigationsmenüs -->
     <app-navbar></app-navbar>
 </header>
 <body>
+    <!-- Dynamische Einbindung der Seiten -->
     <router-outlet></router-outlet>
 </body>
+
