--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,22 +1,27 @@
+<!-- Überschrift -->
 <h1>Feedback Form</h1>
 
+<!-- Feedback Formular-->
 <form (ngSubmit)="submit()">
-
+  <!-- Eingabefeld für den Namen mit beschreibendem Label -->
   <mat-form-field>
     <mat-label for="name">Name: </mat-label>
-    <input matInput type="text" id="name" name="name" [(ngModel)]="formData.name" aria-label="Enter your name">
+    <input matInput type="text" id="name" name="name" 
+      [(ngModel)]="formData.name" aria-label="Enter your name">
   </mat-form-field>
-
+  <!-- Eingabefeld für die Email mit beschreibendem Label -->
   <mat-form-field>
     <mat-label for="email">Email: </mat-label>
-    <input matInput type="text" id="email" name="email" [(ngModel)]="formData.email" aria-label="Enter your email">
+    <input matInput type="text" id="email" name="email" 
+      [(ngModel)]="formData.email" aria-label="Enter your email">
   </mat-form-field>
-
+  <!-- Textbereich für die Nachricht mit beschreibendem Label -->
   <mat-form-field>
     <mat-label for="message">Message: </mat-label>
-    <textarea matInput type="text" id="message" name="message" [(ngModel)]="formData.message" aria-label="Enter a message"></textarea>
+    <textarea matInput type="text" id="message" name="message" 
+      [(ngModel)]="formData.message" aria-label="Enter a message"></textarea>
   </mat-form-field>
-
+  <!-- Button zum Absenden des Formulars mit beschreibendem Label -->
   <button mat-raised-button type="submit" aria-label="Submit">Submit</button>
-  
 </form>
+
