--- a/src/app/country-detail/country-detail.component.html
+++ b/src/app/country-detail/country-detail.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="country">
-
+    <!-- Informationen eines Landes mit Bild mit alternativem Text -->
     <h1>{{ country.name.common }}</h1>
     <img alt="{{ country.flags.alt }}" src="{{ country.flags.png }}">
     <p>Population: {{ country.population }}</p>
-
 </div>
+
