added some features

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -4,3 +4,12 @@ form {
     align-items: center;
     flex-direction: column;
 }
+.name, .email, .message {
+    min-width: 400px; 
+}
+/* .message {
+    height: 100px;
+} */
+.mat-form-field.message textarea {
+    height: 200px;
+  }
