--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
     <!-- Logo-Link mit beschreibendem Label und alternativem Text -->
-    <a routerLink="/home" aria-label="Go to home screen">
+    <a id="home-link" routerLink="/home" aria-label="Go to home screen">
         <img alt="Logo of the website all-countries" src="assets/logo.png">    
     </a>
 
@@ -12,13 +12,13 @@
         <input type="text" id="search" name="search" placeholder="Search..." [(ngModel)]="searchTerm" 
             aria-label="Enter a country to search for" (keydown.enter)="goToCountriesList()">
         <!-- Button zum Auslösen der Suche mit beschreibendem Label -->
-        <button mat-button (click)="goToCountriesList()" aria-label="Search for Countries">Search</button>
+        <button id="search-button" mat-button (click)="goToCountriesList()" aria-label="Search for Countries">Search</button>
         
         <!-- Link zur Liste alle Länder mit beschreibendem Label -->
-        <a mat-button routerLink="/country-list" routerLinkActive="active-link" 
+        <a id="countries-list-link" mat-button routerLink="/country-list" routerLinkActive="active-link" 
             [routerLinkActiveOptions]="{ exact: true }" aria-label="Go to all countries screen">All Countries</a>
         <!-- Link zum Kontaktformular mit beschreibendem Label -->
-        <a mat-button routerLink="/contact" routerLinkActive="active-link" aria-label="Go to the contact form">Contact</a>
+        <a id="contact-link" mat-button routerLink="/contact" routerLinkActive="active-link" aria-label="Go to the contact form">Contact</a>
     </div>          
 </mat-toolbar>
 
