better option for focus on first element

--- a/src/app/country-list/country-list.component.html
+++ b/src/app/country-list/country-list.component.html
@@ -4,12 +4,12 @@
 <div *ngIf="countries">
     <div fxLayout="row wrap">
         <!-- Schleife durch jedes Land der Liste -->
-        <div *ngFor="let country of countries; let i = index">
+        <div *ngFor="let country of countries; let i = index" cdkFocusInitial>
             <!-- Material Card für jedes Land -->
             <mat-card>
                 <!-- Link zur Detailansicht des Landes mit Label -->
                 <a routerLink="/country-detail" [queryParams]="{ data: country.name.common }" [attr.id]="'country-' + i"
-                    attr.aria-label="Go to detail screen of {{ country.name.common }}">
+                    attr.aria-label="Go to detail screen of {{ country.name.common }}" cdkFocusInitial>
                     <mat-card-header>
                         <mat-card-title>{{ country.name.common }}</mat-card-title>
                     </mat-card-header>
